--- a/exampleProjectKotlin/build.gradle
+++ b/exampleProjectKotlin/build.gradle
@@ -1,20 +1,34 @@
-// A minimal example Java project that uses the protobuf plugin.
+// A minimal example kotlin project that uses the protobuf plugin.
 // To build it:
 // $ ../gradlew clean build
 
-apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'com.google.protobuf'
+
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
 
 repositories {
   maven { url "https://plugins.gradle.org/m2/" }
 }
 
 buildscript {
+  ext.kotlin_version = '1.2.0'
   repositories {
     maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
-    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.4'
+    // kotlin integration added since 0.8.4
+    classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.4"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
@@ -28,6 +42,8 @@ dependencies {
   protobuf fileTree("ext/")
 
   testCompile 'junit:junit:4.12'
+  // KotlinFooTest.kt needs reflection utilities
+  testCompile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   // Extra proto source files for test besides the ones residing under
   // "src/test".
   testProtobuf files("lib/protos-test.tar.gz")
