--- a/testProjectKotlin/build.gradle
+++ b/testProjectKotlin/build.gradle
@@ -1,7 +1,6 @@
 // A Java project that demonstrates most of the configuration features of this
 // plugin.
 
-apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'com.google.protobuf'
 
@@ -35,7 +34,7 @@ dependencies {
 
   compile protobufDep
   testCompile 'junit:junit:4.12'
-  // KotlinFooTest.kt requires reflection utilities
+  // Needed for reflection in our unit tests
   testCompile "org.jetbrains.kotlin:kotlin-reflect:1.2.0"
   grpcCompile protobufDep
   grpcCompile 'io.grpc:grpc-stub:1.0.0-pre2'
