WIP: try to enable cacheable tasks

--- a/testProjectBase/build_base.gradle
+++ b/testProjectBase/build_base.gradle
@@ -59,6 +59,7 @@ protobuf {
       task.generateDescriptorSet = true
     }
   }
+  enableCacheExperimental = true
 }
 
 // To include all sourceSets in the project jar
